--- a/index.html
+++ b/index.html
@@ -11,14 +11,33 @@
     <!--header-->
     <header>
         <h1>my portfolio</h1>
-            <nav>
-                <a href="#about">about</a>
-                <a href="#projects">projects</a>
-                <a href="#contact">contact</a>
+        <nav>
+            <a href="#about">about</a>
+            <a href="#projects">projects</a>
+            <a href="#contact">contact</a>
 
-            </nav>
+        </nav>
     </header>
+    <!---main-->
+    <section class="intro">
+        <h2>hi,I,m waluda zaid</h2>
+        <p>A blend of research, development, and design—captured in my personal portfolio</p>
 
+    </section>
+    <section id="about" class="card">
+        <h2>About me</h2>
+        <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel, placeat harum et numquam repellat
+            
+        </p>
+
+    </section>
+
+
+    <!---footer-->
+    <footer>
+        <p>&copy; 2025 waluda zaid.all rights reserved.</p>
+    </footer>
 </body>
 
 </html>
