--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!--header-->
     <header>
-        <h1>my portfolio</h1>
+        <h1>My portfolio</h1>
         <nav>
             <a href="#about">about</a>
             <a href="#projects">projects</a>
@@ -28,7 +28,7 @@
         <h2>About me</h2>
         <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel, placeat harum et numquam repellat
-            
+
         </p>
 
     </section>
