--- a/index.html
+++ b/index.html
@@ -32,6 +32,24 @@
         </p>
 
     </section>
+    <section id="projects" class="projects-section">
+        <h2 class="section-title"> project</h2>
+        <div class="project-grid">
+            <!---project1-->
+            <div class="project-card">
+                <img src="" alt="" class="project-image">
+                <div class="project-content">
+                    <h3 class="project-title">petstore</h3>
+                    <p class="project-desc"> A petstore project</p>
+                    <a href="#" class="project-btn"> view project</a>
+
+</div>
+
+
+
+
+                </div>
+    </section>
 
 
     <!---footer-->
